[gd_scene load_steps=38 format=2]

[ext_resource path="res://Player/1-Player-Bomb Guy17.png" type="Texture" id=1]
[ext_resource path="res://Player/1-Player-Bomb Guy20.png" type="Texture" id=2]
[ext_resource path="res://Player/1-Player-Bomb Guy21.png" type="Texture" id=3]
[ext_resource path="res://Player/1-Player-Bomb Guy22.png" type="Texture" id=4]
[ext_resource path="res://Player/1-Player-Bomb Guy25.png" type="Texture" id=5]
[ext_resource path="res://Player/1-Player-Bomb Guy10.png" type="Texture" id=6]
[ext_resource path="res://Player/1-Player-Bomb Guy23.png" type="Texture" id=7]
[ext_resource path="res://Player/1-Player-Bomb Guy26.png" type="Texture" id=8]
[ext_resource path="res://Player/1-Player-Bomb Guy16.png" type="Texture" id=9]
[ext_resource path="res://Player/1-Player-Bomb Guy12.png" type="Texture" id=10]
[ext_resource path="res://Player/1-Player-Bomb Guy19.png" type="Texture" id=11]
[ext_resource path="res://Player/1-Player-Bomb Guy15.png" type="Texture" id=12]
[ext_resource path="res://Player/1-Player-Bomb Guy24.png" type="Texture" id=13]
[ext_resource path="res://Player/1-Player-Bomb Guy11.png" type="Texture" id=14]
[ext_resource path="res://Player/1-Player-Bomb Guy13.png" type="Texture" id=15]
[ext_resource path="res://Player/1-Player-Bomb Guy14.png" type="Texture" id=16]
[ext_resource path="res://Player/1-Player-Bomb Guy18.png" type="Texture" id=17]
[ext_resource path="res://Player/1-Player-Bomb Guy2.png" type="Texture" id=18]
[ext_resource path="res://Player/1-Player-Bomb Guy1.png" type="Texture" id=19]
[ext_resource path="res://Player/1-Player-Bomb Guy3.png" type="Texture" id=20]
[ext_resource path="res://Player/1-Player-Bomb Guy6.png" type="Texture" id=21]
[ext_resource path="res://Player/1-Player-Bomb Guy7.png" type="Texture" id=22]
[ext_resource path="res://Player/1-Player-Bomb Guy4.png" type="Texture" id=23]
[ext_resource path="res://Player/1-Player-Bomb Guy5.png" type="Texture" id=24]
[ext_resource path="res://Player/1-Player-Bomb Guy8.png" type="Texture" id=25]
[ext_resource path="res://Player/1-Player-Bomb Guy9.png" type="Texture" id=26]
[ext_resource path="res://Scripts/Player.gd" type="Script" id=27]
[ext_resource path="res://HB_buttom.png" type="Texture" id=28]
[ext_resource path="res://HB_mid.png" type="Texture" id=29]
[ext_resource path="res://HB_top.png" type="Texture" id=30]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 19 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 6 ), ExtResource( 14 ), ExtResource( 10 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 1 ), ExtResource( 17 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 5 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 24.9327

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32.7658, 15.4925 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 29 )
region_rect = Rect2( 0, 0, 150, 20 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 28 )
region_rect = Rect2( 0, 0, 150, 20 )

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -12, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "hit"
length = 0.5
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1.7, 2.5 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.07, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -12, 0 ), Vector2( -12, -18 ), Vector2( -12, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.07, 0.14 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.937255, 0.419608, 0.419608, 1 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Player" type="Node2D"]
z_index = -2
script = ExtResource( 27 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -12, 0 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
frame = 8
speed_scale = 2.0

[node name="Body" type="Area2D" parent="."]
position = Vector2( 0, 20 )
collision_layer = 17
collision_mask = 17
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
shape = SubResource( 2 )

[node name="Face" type="Area2D" parent="."]
position = Vector2( -1.19055, -1.19055 )
collision_layer = 17
collision_mask = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="Face"]
position = Vector2( 0.729491, -20.9714 )
shape = SubResource( 3 )

[node name="ProgressBar" type="ProgressBar" parent="."]
modulate = Color( 1, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -66.0
margin_right = 33.0
margin_bottom = -57.0
custom_styles/fg = SubResource( 4 )
custom_styles/bg = SubResource( 5 )
value = 50.0
percent_visible = false
__meta__ = {
"_edit_group_": true
}

[node name="TextureRect" type="TextureRect" parent="ProgressBar"]
margin_left = -0.156342
margin_top = -0.667419
margin_right = 149.844
margin_bottom = 19.3326
rect_scale = Vector2( 0.442, 0.5 )
texture = ExtResource( 30 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/hit = SubResource( 7 )

[connection signal="body_entered" from="Body" to="." method="_on_Body_body_entered"]
[connection signal="body_exited" from="Body" to="." method="_on_Body_body_exited"]
[connection signal="body_entered" from="Face" to="." method="_on_Face_body_entered"]
[connection signal="body_exited" from="Face" to="." method="_on_Face_body_exited"]
[connection signal="value_changed" from="ProgressBar" to="." method="_on_ProgressBar_value_changed"]
